--- a/modules/administration/pages/public-cloud.adoc
+++ b/modules/administration/pages/public-cloud.adoc
@@ -327,7 +327,7 @@ The bootstrap should now run with a new system ID, rather than a duplicate.
 
 
 If you are onboarding Salt client clones, then you will also need to check if they have the same Salt minion ID.
-You will need to delete the minion ID on each cloned minion, using the [command]``rm`` command.
+You will need to delete the minion ID on each cloned client, using the [command]``rm`` command.
 Each operating system type stores this file in a slightly different location, check the table for the appropriate command.
 
 
@@ -353,6 +353,6 @@ Each operating system stores the minion ID file in a slightly different location
 |===
 
 
-Once you have deleted the minion ID file, re-run the bootstrap script, and restart the minion to see the cloned system in {productname} with the new ID.
+Once you have deleted the minion ID file, re-run the bootstrap script, and restart the client to see the cloned system in {productname} with the new ID.
 
 ////
