--- a/modules/administration/pages/tshoot-registerclones.adoc
+++ b/modules/administration/pages/tshoot-registerclones.adoc
@@ -1,5 +1,5 @@
 [[troubleshooting-register-clones]]
-= Troubleshooting Registering Cloned Minions
+= Troubleshooting Registering Cloned Clients
 
 ////
 PUT THIS COMMENT AT THE TOP OF TROUBLESHOOTING SECTIONS
@@ -32,7 +32,7 @@ The cloned virtual machine should have a different UUID from the original (the U
 
 .Procedure: Resolving Duplicate Machine IDs in Cloned Salt Clients
 
-. For {slsa}{nbsp}12: If your machines have the same machine IDs then delete the file on each minion and recreate it:
+. For {slsa}{nbsp}12: If your machines have the same machine IDs then delete the file on each client and recreate it:
 +
 ----
 # rm /etc/machine-id
@@ -47,18 +47,18 @@ The cloned virtual machine should have a different UUID from the original (the U
 # rm /var/lib/dbus/machine-id
 # dbus-uuidgen --ensure
 ----
-. If your machines still have the same minion ID then delete the minion_id file on each minion (FQDN will be used when it is regenerated on minion restart):
+. If your machines still have the same minion ID then delete the minion_id file on each client (FQDN will be used when it is regenerated on client restart):
 +
 ----
 # rm /etc/salt/minion_id
 ----
-. Delete accepted keys from the Onboarding page and the system profile from {productname}, and restart the minion with:
+. Delete accepted keys from the Onboarding page and the system profile from {productname}, and restart the client with:
 +
 ----
 # service salt-minion restart
 ----
 . Re-register the clients.
-Each minion will now have a different [path]``/etc/machine-id`` and should now be correctly displayed on the System Overview page.
+Each client will now have a different [path]``/etc/machine-id`` and should now be correctly displayed on the System Overview page.
 
 
 .Procedure: Resolving Duplicate Machine IDs in Cloned Traditional Clients
