--- a/modules/architecture/pages/taskomatic.adoc
+++ b/modules/architecture/pages/taskomatic.adoc
@@ -16,7 +16,7 @@ Taskomatic is a primary component of {productname}. It performs the following fu
 * **Repository synchronization and repository metadata generation**
 * **CVE audit pre-computation**
 * **Cleanup Jobs**
-* **Checks on minions**
+* **Checks on clients**
 
 
 == Log Files
