--- a/modules/client-configuration/pages/clients-centos.adoc
+++ b/modules/client-configuration/pages/clients-centos.adoc
@@ -88,7 +88,7 @@ service osad restart
 == Registering CentOS Salt Clients with {productname}
 
 
-The following procedure will guide you through registering a CentOS Minion.
+The following procedure will guide you through registering a CentOS Client.
 
 .Support for CentOS Patches
 [WARNING]
@@ -100,7 +100,7 @@ See the matrix of {productname} clients on the main page of the {productname} wi
 
 ====
 
-.Procedure: Register a CentOS 7 Minion
+.Procedure: Register a CentOS 7 Client
 . Add the Open Build Service repo for Salt:
 +
 
@@ -132,10 +132,10 @@ yum install salt salt-minion
 mkdir -p /etc/salt/minion.d
 echo "master:`server_fqdn`" > /etc/salt/minion.d/susemanager.conf
 ----
-. Restart the minion
+. Restart the client
 +
 
 ----
 systemctl restart salt-minion
 ----
-. Proceed to menu:Main Menu[Salt > Keys] from the {webui} and accept the minion's key.
+. Proceed to menu:Main Menu[Salt > Keys] from the {webui} and accept the client's key.
