--- a/modules/client-configuration/pages/clients-rh.adoc
+++ b/modules/client-configuration/pages/clients-rh.adoc
@@ -114,7 +114,7 @@ To troubleshoot this error, look at the HTTP protocol to determine if [command]`
 
 == Registering RES Salt Clients with {productname}
 
-This section will guide you through registering RHEL minions with {productname}.
+This section will guide you through registering RHEL clients with {productname}.
 
 This section assumes you have updated your server to the latest patch level.
 
@@ -176,7 +176,7 @@ cp bootstrap.sh res7-bootstrap.sh
 The following procedure will guide you through registering a Salt client using the bootstrap script.
 
 .Procedure: Registration Using the Bootstrap Script
-. For your new minion download the bootstrap script from the {productname} server:
+. For your new client download the bootstrap script from the {productname} server:
 +
 
 ----
@@ -196,14 +196,14 @@ chmod +x res7-bootstrap.sh
 ./res7-boostrap.sh
 ----
 
-. From the {productname} {webui} select menu:Salt[Keys] and accept the new minion's key.
+. From the {productname} {webui} select menu:Salt[Keys] and accept the new client's key.
 
 
 
 .Troubleshooting Bootstrap
 [IMPORTANT]
 ====
-If bootstrapping a minion fails it is usually caused by missing packages.
+If bootstrapping a client fails it is usually caused by missing packages.
 These missing packages are contained on the RHEL installation media.
 The RHEL installation media should be loop mounted and added as a child channel to the {rhel} channel.
 See the warning in <<bp.expanded-support.resclients>> on access to RHEL Media.
@@ -234,11 +234,11 @@ yum install salt-minion
 mkdir /etc/salt/minion.d
 echo "master:`server_fqdn`" > /etc/salt/minion.d/susemanager.conf
 ----
-. Start the minion service:
+. Start the client service:
 +
 
 ----
 systemctl start salt-minion
 ----
 
-. From the {productname} {webui} select the menu:Salt[Keys] and accept the new minion's key.
+. From the {productname} {webui} select the menu:Salt[Keys] and accept the new client's key.
