--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -17,7 +17,7 @@ However, the root user on {ubuntu} is disabled by default, so in order to use bo
 Other supported features:
 
 * Synchronizing [systemitem]``.deb`` channels
-* Assigning [systemitem]``.deb`` channels to minions
+* Assigning [systemitem]``.deb`` channels to clients
 * GPG signing [systemitem]``.deb`` repositories
 * Information displayed in System details pages
 * Package install, update, and remove
