--- a/modules/client-configuration/pages/creating-a-tools-repository.adoc
+++ b/modules/client-configuration/pages/creating-a-tools-repository.adoc
@@ -7,7 +7,7 @@
 //TODO This document is only relevant for SUSE Manager, we should probably add an <ifdef> for productname?
 
 In this section you will create a tools repository on the {productname} Server for providing client tools.
-The client tools repository contains packages for installing Salt on minions as well as required packages for registering traditional clients during the bootstrapping procedure.
+The client tools repository contains packages for installing Salt on clients as well as required packages for registering traditional clients during the bootstrapping procedure.
 These packages will be installed from the newly generated repository during the registration process.
 In the following procedure you will create the {sle} tools repository.
 
