--- a/modules/client-configuration/pages/registration-webui.adoc
+++ b/modules/client-configuration/pages/registration-webui.adoc
@@ -47,7 +47,7 @@ You will also need to have fully synchronized a base channel for clients to obta
 
 
 .Procedure: Registering Salt Clients
-. On your minion as {rootuser} enter the following command:
+. On your client as {rootuser} enter the following command:
 +
 
 ----
@@ -69,7 +69,7 @@ Use `HTTP` instead to avoid errors.
 ----
 zypper in salt-minion
 ----
-. Modify the minion configuration file to point to the fully qualified domain name ([replaceable]``FQDN``) of the {productname} server (master):
+. Modify the client configuration file to point to the fully qualified domain name ([replaceable]``FQDN``) of the {productname} server (master):
 +
 
 ----
@@ -96,6 +96,6 @@ master: FQDN.server.example.com
 systemctl restart salt-minion
 ----
 
-Your newly registered minion should now show up within the {webui} under menu:Salt[Keys].
+Your newly registered client should now show up within the {webui} under menu:Salt[Keys].
 Accept the [guimenu]``pending`` key to begin management.
 ////
