--- a/modules/client-configuration/pages/salt-client-proxy.adoc
+++ b/modules/client-configuration/pages/salt-client-proxy.adoc
@@ -26,12 +26,12 @@ When the bootstrap process has completed, your client will be listed at menu:Sys
 
 // TODO: Might need an 'unsupported' note? LKB 2019-05-01
 
-Instead of the {webui}, you may use the command line to register a minion through a proxy.
-This procedure requires that you have installed the Salt package on the minion before registration, and have the Advanced systems module activated.
+Instead of the {webui}, you may use the command line to register a client through a proxy.
+This procedure requires that you have installed the Salt package on the client before registration, and have the Advanced systems module activated.
 
 .Procedure: Register a Salt client through a proxy from the command line
 
-. Add the proxy FQDN as the master in the minions configuration file located at:
+. Add the proxy FQDN as the master in the clients configuration file located at:
 +
 ----
 /etc/salt/minion
@@ -53,10 +53,10 @@ Save and restart the salt-minion service with:
 ----
 systemctl restart salt-minion
 ----
-. On the Server, accept the new minion key with:
+. On the Server, accept the new client key with:
 +
 ----
-salt-key -a 'minion'
+salt-key -a 'client'
 ----
 +
-The minion will now connect to the proxy exclusively for Salt operations and normal HTTP package downloads.
+The client will now connect to the proxy exclusively for Salt operations and normal HTTP package downloads.
