--- a/modules/reference/pages/admin/organizations.adoc
+++ b/modules/reference/pages/admin/organizations.adoc
@@ -110,10 +110,10 @@ When the scheduled time comes, the action will use the staged version.
 Minion Content Staging::
 Every Organization administrator can enable Content Staging from the Organization configuration page menu:Admin[Organization > OrgName > Configuration > Enable Staging Contents].
 
-Staging content for minions is affected by two parameters.
+Staging content for clients is affected by two parameters.
 
 * [path]``salt_content_staging_advance:`` expresses the advance time, in hours, for the content staging window to open with regard to the scheduled installation/upgrade time.
-* [path]``salt_content_staging_window:`` expresses the duration, in hours, of the time window for Salt minions to stage packages in advance of scheduled installations or upgrades.
+* [path]``salt_content_staging_window:`` expresses the duration, in hours, of the time window for Salt clients to stage packages in advance of scheduled installations or upgrades.
 
 A value of *salt_content_staging_advance* equal to *salt_content_staging_window* results in the content staging window closing exactly when the installation/upgrade is scheduled to be executed.
 A larger value allows separating download time from the installation time.
