--- a/modules/reference/pages/admin/task-schedules.adoc
+++ b/modules/reference/pages/admin/task-schedules.adoc
@@ -85,7 +85,7 @@ menu:mgr-sync-refresh-default:[]::
 the default time at which the start of synchronization with SUSE Customer Center (SCC) takes place (``mgr-sync-refresh``).
 
 menu:minion-action-cleanup-default:[]::
-deletes stale minion action data from the file system.
+deletes stale client action data from the file system.
 First it tries to complete any possibly unfinished actions by looking up the corresponding results; these results are stored in the Salt job cache.
 An unfinished action can occur if the server has missed the results of the action.
 For successfully completed actions it removes artifacts such as executed script files.
@@ -115,6 +115,6 @@ menu:ssh-push-default:[]::
 prompts clients to check in with {productname} via SSH if they are configured with a menu:Contact Method[SSH Push].
 
 menu:token-cleanup-default:[]::
-deletes expired repository tokens that are used by Salt minions to download packages and metadata.
+deletes expired repository tokens that are used by Salt clients to download packages and metadata.
 
 
