--- a/modules/reference/pages/audit/audit-openscap-overview.adoc
+++ b/modules/reference/pages/audit/audit-openscap-overview.adoc
@@ -66,7 +66,7 @@ Client: Distribution of the XCCDF content to all client machines.
 .OpenSCAP Auditing Availability
 [NOTE]
 ====
-OpenSCAP auditing is not available on Salt SSH minions.
+OpenSCAP auditing is not available on Salt SSH clients.
 ====
 
 
@@ -88,10 +88,10 @@ Installation, removal, and verification of RPM packages can be managed from the 
 OpenSCAP integration in {productname} provides the ability to perform audit scans on client systems.
 This section describes the available scanning methods.
 
-.OpenSCAP Scans via Salt ssh-push Minions
+.OpenSCAP Scans via Salt ssh-push Clients
 [IMPORTANT]
 ====
-Currently performing an OpenSCAP scan is disabled in the WebUI for Salt ssh-push minions.
+Currently performing an OpenSCAP scan is disabled in the WebUI for Salt ssh-push clients.
 This functionality will be adapted and enabled in a future release.
 ====
 
