--- a/modules/reference/pages/configuration/config-channels.adoc
+++ b/modules/reference/pages/configuration/config-channels.adoc
@@ -8,7 +8,7 @@ For salt clients, use state  channels.
 For traditional clients, local configuration management is also available.
 Local configuration management allows you to specify overrides, and select configuration files that are not changed when the system is subscribed to a central channel.
 
-A state channel is a type of a configuration channel used only for Salt minions.
+A state channel is a type of a configuration channel used only for Salt clients.
 In state channels, the [path]``init.sls`` file is not automatically generated, you must manually create and edit it.
 State channels can contain arbitrary configuration files that you can reference from within the [path]``init.sls`` file.
 
@@ -66,7 +66,7 @@ Provides status information for the contents of the channel.
 
 Configuration Actions:::
 Provides access to the most common configuration tasks.
-For Salt minions, there is a link to edit the [path]``init.sls`` file.
+For Salt clients, there is a link to edit the [path]``init.sls`` file.
 
 Channel Properties [Management]:::
 Edit the name, label, and description of the channel by clicking the btn:[Edit Properties] button.
