--- a/modules/reference/pages/configuration/config-menu.adoc
+++ b/modules/reference/pages/configuration/config-menu.adoc
@@ -10,7 +10,7 @@ Centrally-managed files are available to multiple systems, while locally-managed
 [NOTE]
 ====
 Configuration Management is available for both traditionally and Salt clients.
-Some traditional features are not suitable for Salt minions, and thus not available and excluded from the {webui}.
+Some traditional features are not suitable for Salt clients, and thus not available and excluded from the {webui}.
 ====
 
 
@@ -23,7 +23,7 @@ This matrix shows supported and unsupported configuration management features.
 [IMPORTANT]
 ====
 Several {webui} tabs will be missing for Salt Configuration Management.
-These features are not suitable for Salt minions.
+These features are not suitable for Salt clients.
 ====
 
 .Salt Configuration Management
