--- a/modules/reference/pages/navigation/categories-and-pages.adoc
+++ b/modules/reference/pages/navigation/categories-and-pages.adoc
@@ -52,7 +52,7 @@ Perform various actions on sets of systems, including scheduling patch updates, 
 The availability of these actions depend on the system type.
 
 menu:Bootstrapping[]::
-Bootstrap minion machines using SSH.
+Bootstrap client machines using SSH.
 Input SSH credentials and the activation key the selected system will use for its software sources.
 SUSE Manager will install required software (salt-minion packages on the client machine) and remotely perform the registration.
 
@@ -84,18 +84,18 @@ Display and modify virtual host managers, file-based or VMware-based.
 
 == Salt
 
-View all minions.
+View all clients.
 Manage on-boarding, remote commands, and states catalogs.
 
 menu:Keys[]::
-Manage minion keys.
+Manage client keys.
 
 menu:Remote Commands[]::
 Execute remote commands on targeted systems.
 Select the preview button to ensure selected targets are available and click Run to execute.
 
 menu:State Catalog[]::
-Create, store, and manage states for your Salt minions from the State Catalog.
+Create, store, and manage states for your Salt clients from the State Catalog.
 
 
 == Images
