--- a/modules/reference/pages/schedule/action-chains.adoc
+++ b/modules/reference/pages/schedule/action-chains.adoc
@@ -5,7 +5,7 @@ You can create action chains{mdash}or grouped actions{mdash}for example, in the 
 xref:reference:systems/system-details/sd-packages.adoc[SD Packages]) or in the menu:Configuration[Deploy Files] subtab on a system details page (see xref:reference:systems/system-details/sd-configuration.adoc#sd-config-deploy-files[Deploy Files]).
 
 The following list of actions may be added to an action chain.
-These actions are supported on both traditional clients and Salt minions.
+These actions are supported on both traditional clients and Salt clients.
 Schedulable actions are located under a systems, [guimenu]``System Details`` page on the following subtabs.
 
 .Chainable Actions
