--- a/modules/reference/pages/software/manage-channels.adoc
+++ b/modules/reference/pages/software/manage-channels.adoc
@@ -45,7 +45,7 @@ This page lists the settings made during channel creation.
 
 [WARNING]
 ====
-If you delete a channel that has been assigned to a set of minions, it will trigger an immediate update of the channel state for any minions associated with the deleted channel.
+If you delete a channel that has been assigned to a set of clients, it will trigger an immediate update of the channel state for any clients associated with the deleted channel.
 This is to ensure that the changes are reflected accurately in the repository file.
 ====
 
