--- a/modules/reference/pages/systems/autoinst-overview.adoc
+++ b/modules/reference/pages/systems/autoinst-overview.adoc
@@ -8,7 +8,7 @@ In the following section, {ay} and {ay} features apply for {sle} client systems 
 For {rhela} systems, use Kickstart and Kickstart features.
 ====
 
-.Auto-Installing Salt Minions Currently Not Supported
+.Auto-Installing Salt Clients Currently Not Supported
 [IMPORTANT]
 ====
 This procedure will work for traditionally  managed systems (system type [systemitem]``management``).
