--- a/modules/reference/pages/systems/system-details.adoc
+++ b/modules/reference/pages/systems/system-details.adoc
@@ -67,7 +67,7 @@ IPv6 Address::
 The IPv6 address of the client.
 
 Minion Id::
-On salt clients only, shows the minion identification value.
+On salt clients only, shows the client identification value.
 
 Virtualization::
 If the client is a virtual machine, the type of virtualization is listed.
