--- a/modules/reference/pages/systems/system-groups.adoc
+++ b/modules/reference/pages/systems/system-groups.adoc
@@ -142,7 +142,7 @@ To change the system group's users, select and deselect the appropriate check bo
 // FIXME : menu:State Catalog[] gone
 The [guimenu]``States`` tab displays states which have been created and added using the menu:Salt[State Catalog].
 From this page you can select which states should be applied across a group of systems.
-A state applied from this page will be applied to all minions within a group.
+A state applied from this page will be applied to all clients within a group.
 
 [NOTE]
 ====
