--- a/modules/reference/pages/systems/systems-list.adoc
+++ b/modules/reference/pages/systems/systems-list.adoc
@@ -122,7 +122,7 @@ The menu:Systems[Systems > Inactive Systems] page displays systems that have not
 image::systems_inactive.png[scaledwidth=80%]
 
 On traditional clients, checking in is performed periodically by client tools (specifically `mgr_check`) - client systems connect to {productname} to see if there are any updates available or if any actions have been scheduled.
-For Salt systems, a Taskomatic job checks on the minions periodically by pinging them when otherwise inactive.
+For Salt systems, a Taskomatic job checks on the clients periodically by pinging them when otherwise inactive.
 If you see a message telling you that check-ins are not taking place, the system is not successfully connecting to {productname}.
 
 The reason may be one of the following:
@@ -137,7 +137,7 @@ For more on restarting and troubleshooting, see xref:client-configuration:contac
 * The system itself has not been properly configured, perhaps pointing at the wrong {productname} Server.
 * The system is not in the network.
 * Some other barrier exists between the system and the {productname} Server.
-* For Salt minions, Taskomatic might not be operational.
+* For Salt clients, Taskomatic might not be operational.
 
 
 
