--- a/modules/retail/pages/retail-install-setup.adoc
+++ b/modules/retail/pages/retail-install-setup.adoc
@@ -89,7 +89,7 @@ With a limited feature set, {susemgrproxy} 3.2 is also possible.
 Do not install the branch server as a traditionally managed client.
 ====
 
-For instructions to install Salt-based proxy minions and register them to {susemgr}, see xref:installation:install-proxy-unified.adoc[].
+For instructions to install Salt-based proxy clients and register them to {susemgr}, see xref:installation:install-proxy-unified.adoc[].
 
 The activation key should have the following channels, pools and respective updates:
 
