--- a/modules/retail/pages/retail-migration-slepostosuma.adoc
+++ b/modules/retail/pages/retail-migration-slepostosuma.adoc
@@ -122,7 +122,7 @@ retail_yaml --from-yaml retail.yml --branch <branch_name>
 +
 Repeat the command for every branch.
 
-. To finalize each branch server migration, you must install the branch server machine as a Salt-based minion and bootstrap it as a proxy.
+. To finalize each branch server migration, you must install the branch server machine as a Salt-based client and bootstrap it as a proxy.
 For more information about proxy installation, see xref:retail-install.adoc#retail.sect.install.branch[Installing and Registering].
 For more information about using an activation key to assign the required channels, see xref:retail_chap_install.adoc#retail.sect.install.install.config[Configuring Server].
 After onboarded to {smr}, the branch server machine is connected with the empty profile (by FQDN), and so it will get the Retail configuration.
