--- a/modules/salt/pages/salt-example-formula.adoc
+++ b/modules/salt/pages/salt-example-formula.adoc
@@ -17,7 +17,7 @@ NOTE: This installs the package contents to [path]``/usr/share/susemanager/formu
 
 . After installing the RPM, log in to the {productname} {webui}.
 
-. Browse to the menu:Main Menu[System Details] page of any minion you would like to apply the formula to.
+. Browse to the menu:Main Menu[System Details] page of any client you would like to apply the formula to.
 
 . On the menu:Main Menu[System Details] page you will see a new btn:[Formulas] tab.
 Select it to view a list of installed formulas.
@@ -32,7 +32,7 @@ Select it to view a list of installed formulas.
 +
 
 ----
-salt '$your_minion' pillar.items
+salt '$your_client' pillar.items
 ----
 +
 
@@ -48,7 +48,7 @@ salt '$your_minion' pillar.items
        foobar
    mgr_server:
        manager_server
-   org_id:alt '$your_minion_here'
+   org_id:alt '$your_client_here'
        1
    timezone:
        ----------
@@ -59,11 +59,11 @@ salt '$your_minion' pillar.items
     ...
 ----
 
-. Apply this state to your minion by applying the highstate from the command line with:
+. Apply this state to your client by applying the highstate from the command line with:
 +
 
 ----
-salt '$your_minion' state.highstate
+salt '$your_client' state.highstate
 ----
 +
 
