--- a/modules/ROOT/pages/index-uyuni.adoc
+++ b/modules/ROOT/pages/index-uyuni.adoc
@@ -8,7 +8,7 @@
 {productname} allows you to maintain a high level of security while effectively managing system life-cycle requirements.
 
 {productname} uses _Salt_ to provide event-driven configuration and management control.
-The Salt-master orchestrates thousands of Salt-minions ({productname} Clients) using remote execution.
+The Salt-master orchestrates thousands of Salt clients ({productname} Clients) using remote execution.
 
 {productname} offers seamless management of {sle}, {rhel}, Ubuntu, CentOS, and Scientific Linux client systems and is fully compatible with Red Hat Satellite Server.
 
