--- a/modules/administration/pages/repo-metadata.adoc
+++ b/modules/administration/pages/repo-metadata.adoc
@@ -95,6 +95,6 @@ rpm --import http://server.example.com/pub/company.key
 You can do this through the {productname} {webui}, or from the command line on the server with this command:
 +
 ----
-salt <ubuntu-minion> state.apply channels
+salt <ubuntu-client> state.apply channels
 ----
 . OPTIONAL: For Salt clients, you might prefer to use  a state to manage your GPG keys.
