--- a/modules/architecture/pages/salt-api.adoc
+++ b/modules/architecture/pages/salt-api.adoc
@@ -12,7 +12,7 @@ The *salt-api* is a primary component of {productname}. It performs the followin
 
 * **Internal API communicates the Java side of {productname} with the salt-master**
 * **Provides HTTPS and websocket interfaces with the salt-master**
-* **Handles the SSH connections to minions (SSH Push)**
+* **Handles the SSH connections to clients (SSH Push)**
 
 
 
