--- a/modules/architecture/pages/salt-broker.adoc
+++ b/modules/architecture/pages/salt-broker.adoc
@@ -10,8 +10,8 @@
 
 The *salt-broker* is a component of the {productname} proxy. It performs the following functions in the stack.
 
-* **Used only in the {productname} Proxy for minions using pull method**
-* **Forwards the ZeroMQ Salt channels from {productname} server to the proxy minions**
+* **Used only in the {productname} Proxy for clients using pull method**
+* **Forwards the ZeroMQ Salt channels from {productname} server to the proxy clients**
 
 == Log Files
 
