--- a/modules/architecture/pages/salt-master.adoc
+++ b/modules/architecture/pages/salt-master.adoc
@@ -13,7 +13,7 @@ The *salt-master* is a primary component of {productname}. It performs the follo
 * **Core process of Salt on the server side**
 * **Provides communication with Salt clients**
 * **Handles Salt jobs, publishes to the Salt event Bus**
-* **Handles minion responses**
+* **Handles client responses**
 * **Manages states, highstates, pillar information, etc**
 
 
