--- a/modules/architecture/pages/salt-ssh-push.adoc
+++ b/modules/architecture/pages/salt-ssh-push.adoc
@@ -27,7 +27,7 @@ image::salt-ssh-contact-taigon.png[scaledwidth=80%]
 Salt provides "`Salt SSH`"
  ([command]``salt-ssh``), a feature to manage clients from a server.
 It works without installing Salt related software on clients.
-Using Salt SSH there is no need to have minions connected to the Salt master.
+Using Salt SSH there is no need to have clients connected to the Salt master.
 Using this as a {productname} connect method, this feature provides similar functionality for Salt clients as the traditional Push via SSH feature for traditional clients.
 
 This feature allows:
@@ -90,7 +90,7 @@ While on traditional clients with SSH push configured only [command]``mgr_check`
 
 == Known Limitation
 
-* OpenSCAP auditing is not available on Salt SSH minions.
+* OpenSCAP auditing is not available on Salt SSH clients.
 * Beacons do not work with Salt SSH.
 ** Installing a package on a system using [command]``zypper`` will not invoke the package refresh.
 ** Virtual Host functions (for example, a host to guests) will not work if the virtual host system is Salt SSH-based.
