--- a/modules/client-configuration/pages/contact-methods.adoc
+++ b/modules/client-configuration/pages/contact-methods.adoc
@@ -339,7 +339,7 @@ image::salt-ssh-contact-taigon.png[scaledwidth=80%]
 
 Salt provides "`Salt SSH`" ([command]``salt-ssh``), a feature to manage clients from a server.
 It works without installing Salt related software on clients.
-Using Salt SSH there is no need to have minions connected to the Salt master.
+Using Salt SSH there is no need to have clients connected to the Salt master.
 Using this as a {productname} connect method, this feature provides similar functionality for Salt clients as the traditional Push via SSH feature for traditional clients.
 
 This feature allows:
@@ -398,7 +398,7 @@ While on traditional clients with SSH push configured only [command]``rhn_check`
 
 === Known Limitation
 
-* OpenSCAP auditing is not available on Salt SSH minions.
+* OpenSCAP auditing is not available on Salt SSH clients.
 
 
 * Beacons do not work with Salt SSH.
