--- a/modules/installation/pages/ports.adoc
+++ b/modules/installation/pages/ports.adoc
@@ -63,18 +63,18 @@ Needed if you push actions to or via a {susemgrproxy}.
 Inbound / TCP / salt
 +
 
-Required by the Salt-master to accept communication requests via TCP from minions.
-The connection is initiated by the minion and remains open to allow the master to send commands.
-This port uses a publish/subscribe topology; the minion subscribes to notifications from the master.
+Required by the Salt-master to accept communication requests via TCP from clients.
+The connection is initiated by the client and remains open to allow the master to send commands.
+This port uses a publish/subscribe topology; the client subscribes to notifications from the master.
 
 4506::
 Inbound / TCP / salt
 +
 
-Required by the Salt-master to accept communication requests via TCP from minions.
-The connection is initiated by the minion and is open only when needed.
-Usually, minions will open this port when they have to report results to the master, such as when a command received on port 4505 has finished.
-This port uses a request/response topology; the minion sends requests to the master.
+Required by the Salt-master to accept communication requests via TCP from clients.
+The connection is initiated by the client and is open only when needed.
+Usually, clients will open this port when they have to report results to the master, such as when a command received on port 4505 has finished.
+This port uses a request/response topology; the client sends requests to the master.
 
 25151::
 TCP
