--- a/modules/reference/pages/salt/salt-keys.adoc
+++ b/modules/reference/pages/salt/salt-keys.adoc
@@ -1,9 +1,9 @@
 [[ref.webui.salt.keys]]
 = Keys
 
-The [guimenu]``Keys`` page provides a summary of your minions, including their names, fingerprints, state, and actions you may perform on them.
+The [guimenu]``Keys`` page provides a summary of your clients, including their names, fingerprints, state, and actions you may perform on them.
 
-Once you have pointed a minion to the {productname} server as its master within [replaceable]``/etc/salt/minion``, you can choose to accept or reject a minion from this page.
+Once you have pointed a client to the {productname} server as its master within [replaceable]``/etc/salt/minion``, you can choose to accept or reject a client from this page.
 Toggle the check mark or cross in the `actions` column.
 
 .Keys Overview
