--- a/modules/reference/pages/salt/salt-menu.adoc
+++ b/modules/reference/pages/salt/salt-menu.adoc
@@ -2,6 +2,6 @@
 = Salt Menu
 
 Open menu:Main Menu[Salt] from the left navigation sidebar.
-menu:Main Menu[Salt > Keys] provides an overview of your Salt minions (clients).
-Use [guimenu]``Remote Commands`` to execute remote commands on your Salt minions.
+menu:Main Menu[Salt > Keys] provides an overview of your Salt clients (minions).
+Use [guimenu]``Remote Commands`` to execute remote commands on your Salt clients.
 You can also define a [guimenu]``State Catalog`` for creating a collection of salt system states.
