--- a/modules/reference/pages/salt/salt-remote-commands.adoc
+++ b/modules/reference/pages/salt/salt-remote-commands.adoc
@@ -1,7 +1,7 @@
 [[ref.webui.salt.remote.commands]]
 = Remote Commands
 
-The remote commands page allows you to execute and run commands from the {productname} server on several minions.
+The remote commands page allows you to execute and run commands from the {productname} server on several clients.
 
 .Remote Commands
 
@@ -14,14 +14,14 @@ Therefore you must not mount [filename]``/tmp`` with the [option]``noexec`` opti
 .Remote Commands Security
 [WARNING]
 ====
-All commands run from the [guimenu]``Remote Commands`` page are executed as {rootuser} on minions.
+All commands run from the [guimenu]``Remote Commands`` page are executed as {rootuser} on clients.
 Wildcards can be used to run commands across any number of systems, so always take extra precaution as this may have drastic consequences for your systems.
 ====
 
 On the menu:Salt[Remote Commands] page you will see two text boxes.
 The first box is for entering commands.
-The second box is for targeting minions by name, group, or by using wildcards.
+The second box is for targeting clients by name, group, or by using wildcards.
 
-Input a command you want to execute, add a target minion, group, or wildcard you want to execute the command on.
+Input a command you want to execute, add a target client, group, or wildcard you want to execute the command on.
 Select the btn:[Find Targets] button to verify which machines will be targeted.
 Select the btn:[Run Command] button to execute a command on selected systems.
