--- a/modules/reference/pages/systems/bootstrapping.adoc
+++ b/modules/reference/pages/systems/bootstrapping.adoc
@@ -1,7 +1,7 @@
 [[ref.webui.systems.bootstrapping]]
 = Bootstrapping [Salt]
 
-The [guimenu]``Bootstrapp Minions`` page allows you to bootstrap Salt minions from the {webui}.
+The [guimenu]``Bootstrapp Minions`` page allows you to bootstrap Salt clients from the {webui}.
 
 .Bootstrapping
 
@@ -10,21 +10,21 @@ image::bootstrapping.png[scaledwidth=80%]
 
 .Bootstrapping Parameters
 Host::
-Place the FQDN of the minion to be bootstrapped within this field.
+Place the FQDN of the client to be bootstrapped within this field.
 
 SSH Port::
 Place the SSH port that will be used to connect and bootstrap a machine.
 The default is ``22``.
 
 User::
-Input the minions user login.
+Input the clients user login.
 The default is {rootuser}.
 
 Password::
-Input the minions login password.
+Input the clients login password.
 
 Activation Key::
-Select the activation key (associated with a software source channel) that the minion should use to bootstrap with.
+Select the activation key (associated with a software source channel) that the client should use to bootstrap with.
 
 Disable SSH Strict Key Host Checking::
 This check box is selected by default.
@@ -38,5 +38,5 @@ NOTE: This feature is a Technology preview.
 If selected a system will automatically be configured to use SSH.
 No other connection method will be configured.
 
-Once your minion's connection details have been filled in click the btn:[Bootstrap] button.
-When the minion has completed the bootstrap process, find your new minion listed on the menu:Systems[Overview] page.
+Once your client's connection details have been filled in click the btn:[Bootstrap] button.
+When the client has completed the bootstrap process, find your new client listed on the menu:Systems[Overview] page.
