--- a/modules/salt/pages/salt-commands.adoc
+++ b/modules/salt/pages/salt-commands.adoc
@@ -5,14 +5,14 @@
 This section shows useful Salt commands.
 
 salt-run::
-Print a list of all minions that are up:
+Print a list of all clients that are up:
 +
 
 ----
 salt-run manage.up
 ----
 +
-Print a list of all minions that are down:
+Print a list of all clients that are down:
 +
 
 ----
@@ -26,7 +26,7 @@ Print a list with the current status of all Salt clients:
 salt-run manage.status
 ----
 +
-Check the version of Salt running on the master and active minions:
+Check the version of Salt running on the master and active clients:
 +
 
 ----
@@ -34,7 +34,7 @@ salt-run manage.versions
 ----
 
 salt-cp::
-Copy a file to a minion or set of minions.
+Copy a file to a client or set of clients.
 +
 
 ----
