--- a/modules/salt/pages/salt-terminology.adoc
+++ b/modules/salt/pages/salt-terminology.adoc
@@ -3,10 +3,10 @@
 
 
 Grains::
-Grains provide information about the hardware of a minion.
+Grains provide information about the hardware of a client.
 For example, the operating system, IP addresses, network interfaces, memory, etc.
 When running a Salt command from keep in mind any modules and functions called are run locally from the system being called.
-Salt modules are stored on minions and master within the following directory:
+Salt modules are stored on clients and master within the following directory:
 +
 
 ----
@@ -46,14 +46,14 @@ First update all other system packages using Salt states then update [package]#s
 
 Pillar::
 Pillars unlike grains are created on the master.
-Pillar files contain information about a minion or group of minions.
-Pillars allow you to send confidential information to a targeted minion or group of minions.
-Pillars are useful for sensitive data, configuration of minions, variables, and any arbitrary data which should be defined.
+Pillar files contain information about a client or group of clients.
+Pillars allow you to send confidential information to a targeted client or group of clients.
+Pillars are useful for sensitive data, configuration of clients, variables, and any arbitrary data which should be defined.
 For more information on pillars, see https://docs.saltstack.com/en/latest/topics/tutorials/pillar.html.
 
 Beacons::
 Beacons allow an administrator to use the event system in Salt to monitor non-Salt processes.
-Minions may use beacons to hook into many types of system proceses for constant monitoring.
+Clients may use beacons to hook into many types of system proceses for constant monitoring.
 Once a targeted monitored activity occurs an event is sent on the Salt event bus that may be used to trigger a reactor.
 +
 
@@ -66,7 +66,7 @@ This package is not installed automatically during the salt minion package insta
 [NOTE]
 .Peer Communication with salt-broker
 ====
-The salt-broker acts like a switch and not like a hub, therefore Peer communication will only work for minions behind the same broker or proxy.
+The salt-broker acts like a switch and not like a hub, therefore Peer communication will only work for clients behind the same broker or proxy.
 For more information on Salt and peer communication, see https://docs.saltstack.com/en/latest/ref/peer.html.
 ====
 
