--- a/modules/ROOT/pages/release-notes-version-4.0.adoc
+++ b/modules/ROOT/pages/release-notes-version-4.0.adoc
@@ -209,6 +209,7 @@ We have added a prototype of real time search using Algolia.
 We are still developing an alternative for offline reading.
 
 
+The search feature of this beta release is a prototype and points to development and testing sources.
 [[new-ui]]
 === Antora Static Site
 
