--- a/modules/administration/pages/iss.adoc
+++ b/modules/administration/pages/iss.adoc
@@ -14,7 +14,7 @@ If conflicting configurations exist, the system will prioritize the master confi
 
 * In the [guimenu]``Master Fully-Qualified Domain Name`` field, enter the FQDN of the ISS master (for example: [systemitem]``http://server1.example.com``).
 * In the [guimenu]``Filename of this Master's CA Certificate`` field, enter the absolute  path to the CA certificate on the ISS master (for example: [systemitem]``/etc/pki/trust/anchors-org-ssl``).
-. To add the ISS master, click btn:[Add new master].
+Click btn:[Add new master] to add the ISS master.
 
 .Procedure: Setting up an ISS Slave
 
