--- a/modules/administration/pages/iss.adoc
+++ b/modules/administration/pages/iss.adoc
@@ -22,7 +22,9 @@ Click btn:[Add new master] to add the ISS master.
 . In the [guimenu]``Edit Slave Details`` dialog, for the server to use as the ISS slave provide these details:
 
 * In the [guimenu]``Slave Fully-Qualified Domain Name`` field, enter the FQDN of the ISS slave (for example: [systemitem]``http://server2.example.com``).
-* To enable the slave to synchronize with the master, check [guimenu]``Allow Slave to Sync?``.
+* Check the [guimenu]``Allow Slave to Sync?`` checkbox to enable the slave to synchronize with the master.
+* Check the [guimenu]``Sync All Orgs to Slave?`` checkbox to synchronize all organizations to this slave.
+. Click btn:[Create] to add the ISS slave.```
 . In the [guimenu]``Allow Export of the Selected Organizations`` section, check the organizations you want to allow this slave to export to the master, and click btn:[Allow Orgs].
 
 When you have the master and slaves set up, you can perform a synchronization from the command line on the master, with this command:
