Please remove warning notes for prerelease versions (#599)
* Reduce WARNING and IMPORTANT boxes that were relevant for beta only.
Co-Authored-By: Karl Eichwalder <ke@suse.de>

--- a/modules/ROOT/pages/release-notes-version-4.0.adoc
+++ b/modules/ROOT/pages/release-notes-version-4.0.adoc
@@ -161,15 +161,6 @@ In this new layout, you can propose changes directly by clicking the btn:[Edit t
 You can also report an issue by clicking [guimenu]``Report Issue`` in the [guimenu]``Resources`` menu.
 
 
-[WARNING]
-====
-Do not use this documentation for production!
-The documentation on this site is being offered as a preview of changes to come.
-They are for testing purposes only.
-====
-
-
-
 === Goals for this Release
 
 * <<cleanup-ia>>
@@ -218,14 +209,7 @@ We have added a prototype of real time search using Algolia.
 We are still developing an alternative for offline reading.
 
 
-[IMPORTANT]
-====
-Do not use this feature for production!
-The search feature is currently a prototype and points to development and testing sources.
-====
-
-
-
+The search feature of this beta release is a prototype and points to development and testing sources.
 [[new-ui]]
 === Antora Static Site
 
