--- a/modules/client-configuration/pages/clients-centos.adoc
+++ b/modules/client-configuration/pages/clients-centos.adoc
@@ -88,7 +88,7 @@ service osad restart
 == Registering CentOS Salt Clients with {productname}
 
 
-The following procedure will guide you through registering a CentOS Client.
+The following procedure will guide you through registering a CentOS client.
 
 .Support for CentOS Patches
 [WARNING]
