--- a/modules/administration/pages/monitoring.adoc
+++ b/modules/administration/pages/monitoring.adoc
@@ -226,7 +226,7 @@ This feature is a technical preview available in {productname} 4.0.2 and later.
 It should not be used in production systems.
 ====
 
-. On the monitoring server, open the Prometheus static configuration file at [path]``/etc/prometheus/prometheus.yml``.
+. On the monitoring server, open the Prometheus static configuration file [path]``/etc/prometheus/prometheus.yml``.
 . Add or update the scrape configurations section:
 +
 ----
